--- a/css/viewing.css
+++ b/css/viewing.css
@@ -127,7 +127,7 @@ a.active, a:hover {
 
 .bodycontainer .column2 p {
   font-size: 1.2rem;
-  margin-bottom: 1.2rem;
+  //margin-bottom: 1.2rem;
   margin-left:1rem;
 }
 
